# ClusteredRenderer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  bootstrap-vcpkg.bat  conanfile.txt  conaninstall.bat  notes.txt  vcpkg.json
ClusteredRenderer/: CMakeLists.txt  ClusteredRenderer.cpp
ClusteredRenderer/assets/meshes/: testMat.txt
ClusteredRenderer/resources/shaders/: brdf.frag  grid.frag  grid.vert  hdrToCubemaps.frag  irradiance.frag  irradiance.vert  postprocess.frag  postprocess.vert  prefilter.frag  prefilter.vert  skybox.frag  skybox.vert  test.vert  utils.glsl  wireframe.frag  wireframe.geom  wireframe.vert
ClusteredRenderer/src/: App.cpp  App.hpp  CMakeLists.txt  CerealCustomTypes.hpp  Components.hpp  Core.hpp  CoreImports.hpp  Entity.cpp  Entity.hpp  Gui.cpp  Gui.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.hpp  Scriptable.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp
ClusteredRenderer/src/Assets/: AssetManager.cpp  AssetManager.hpp  AssetWatcher.cpp  AssetWatcher.hpp  Assets.hpp  CommonMetaData.cpp  CommonMetaData.hpp  FileUtils.hpp  MaterialAsset.hpp  MetaData.cpp  MetaData.hpp  Proxy.hpp  TextAsset.hpp
ClusteredRenderer/src/Assets/AssetTypes/: AssetType.hpp  MaterialAsset.cpp  MaterialAsset.hpp  MeshAsset.hpp  ShaderAsset.hpp  ShaderSourceAsset.hpp  TextAsset.hpp  Texture2DAsset.hpp
ClusteredRenderer/src/Core/: Input.cpp  Input.hpp  KeyCodes.hpp  Time.cpp  Time.hpp
ClusteredRenderer/src/Gui/: ContentBrowserWindow.hpp  ControlUtils.cpp  ControlUtils.hpp  GuiWindow.hpp  IconsFontAwesome6.h  InspectorWindow.hpp  MenuBar.hpp  SceneWindow.hpp  StyleDracula.hpp  ViewportWindow.hpp  WindowTest1.hpp  WindowTest2.hpp
ClusteredRenderer/src/Gui/Definitions/: IconsFontAwesome6.h
ClusteredRenderer/src/Gui/Windows/: AssetManagerWindow.hpp  ContentBrowserWindow.hpp  InspectorWindow.hpp  SceneWindow.hpp  SettingsWindow.hpp  ViewportWindow.hpp
ClusteredRenderer/src/Renderer/: Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  Framebuffer.cpp  Framebuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  TextureLegacy.cpp  TextureLegacy.hpp  UniformTypes.hpp  Window.cpp  Window.hpp
ClusteredRenderer/src/Renderer/OpenGL/: Buffer.cpp  Buffer.hpp  MeshRenderInfo.hpp  ShaderRenderInfo.hpp  Texture2DRenderInfo.hpp  VertexArray.cpp  VertexArray.hpp
ClusteredRenderer/src/Scripts/: LightSpawnerScript.hpp  Scripts.hpp
ClusteredRenderer/src/Utils/: AppState.hpp  FileUtils.hpp  RandomUtils.hpp
